maff
rm -f dwm drw.o dwm.o util.o dwm-6.2.tar.gz
dwm build options:
CFLAGS   = -std=c99 -pedantic -Wall -Wno-deprecated-declarations -Os -I/usr/X11R6/include -I/usr/include/freetype2 -D_DEFAULT_SOURCE -D_BSD_SOURCE -D_POSIX_C_SOURCE=2 -DVERSION="6.2" -DXINERAMA
LDFLAGS  = -L/usr/X11R6/lib -lX11 -lXinerama -lfontconfig -lXft -lXrender
CC       = cc
cc -c -std=c99 -pedantic -Wall -Wno-deprecated-declarations -Os -I/usr/X11R6/include -I/usr/include/freetype2 -D_DEFAULT_SOURCE -D_BSD_SOURCE -D_POSIX_C_SOURCE=2 -DVERSION=\"6.2\" -DXINERAMA drw.c
cc -c -std=c99 -pedantic -Wall -Wno-deprecated-declarations -Os -I/usr/X11R6/include -I/usr/include/freetype2 -D_DEFAULT_SOURCE -D_BSD_SOURCE -D_POSIX_C_SOURCE=2 -DVERSION=\"6.2\" -DXINERAMA dwm.c
In file included from dwm.c:314:
config.h:158:57: error: expected ‘}’ before ‘{’ token
  158 |     {MOD3,              XK_t,           setlayout       {.v = $layouts[0]}}
      |     ~                                                   ^
config.h:159:5: error: expected ‘}’ before ‘{’ token
  159 |     {MOD3,              XK_f,           setlayout       {.v = $layouts[1]}}
      |     ^
config.h:113:21: note: to match this ‘{’
  113 | static Key keys[] = {
      |                     ^
dwm.c:2069:1: warning: ‘tagmon’ defined but not used [-Wunused-function]
 2069 | tagmon(const Arg *arg)
      | ^~~~~~
dwm.c:1845:1: warning: ‘shiftview’ defined but not used [-Wunused-function]
 1845 | shiftview(const Arg *arg)
      | ^~~~~~~~~
dwm.c:1805:1: warning: ‘chovgaps’ defined but not used [-Wunused-function]
 1805 | chovgaps(const Arg *arg)
      | ^~~~~~~~
dwm.c:1794:1: warning: ‘chohgaps’ defined but not used [-Wunused-function]
 1794 | chohgaps(const Arg *arg)
      | ^~~~~~~~
dwm.c:1783:1: warning: ‘chivgaps’ defined but not used [-Wunused-function]
 1783 | chivgaps(const Arg *arg)
      | ^~~~~~~~
dwm.c:1772:1: warning: ‘chihgaps’ defined but not used [-Wunused-function]
 1772 | chihgaps(const Arg *arg)
      | ^~~~~~~~
dwm.c:1761:1: warning: ‘chvgaps’ defined but not used [-Wunused-function]
 1761 | chvgaps(const Arg *arg)
      | ^~~~~~~
dwm.c:1750:1: warning: ‘chhgaps’ defined but not used [-Wunused-function]
 1750 | chhgaps(const Arg *arg)
      | ^~~~~~~
dwm.c:1739:1: warning: ‘chogaps’ defined but not used [-Wunused-function]
 1739 | chogaps(const Arg *arg)
      | ^~~~~~~
dwm.c:1728:1: warning: ‘chigaps’ defined but not used [-Wunused-function]
 1728 | chigaps(const Arg *arg)
      | ^~~~~~~
dwm.c:1717:1: warning: ‘chgaps’ defined but not used [-Wunused-function]
 1717 | chgaps(const Arg *arg)
      | ^~~~~~
dwm.c:1711:1: warning: ‘defgaps’ defined but not used [-Wunused-function]
 1711 | defgaps(const Arg *arg)
      | ^~~~~~~
dwm.c:1704:1: warning: ‘tglgaps’ defined but not used [-Wunused-function]
 1704 | tglgaps(const Arg *arg)
      | ^~~~~~~
dwm.c:1372:1: warning: ‘quit’ defined but not used [-Wunused-function]
 1372 | quit(const Arg *arg)
      | ^~~~
dwm.c:931:1: warning: ‘focusmon’ defined but not used [-Wunused-function]
  931 | focusmon(const Arg *arg)
      | ^~~~~~~~
make: *** [Makefile:18: dwm.o] Error 1
